--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,24 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "personalsite",
   "authors": [
-    "The Polymer Authors"
+    "Justin Huang"
   ],
-  "license": "https://polymer.github.io/LICENSE.txt",
+  "license": "BSD",
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#2.0-preview",
-    "app-route": "PolymerElements/app-route#2.0-preview",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
-    "iron-media-query": "PolymerElements/iron-media-query#2.0-preview",
-    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
-    "iron-selector": "PolymerElements/iron-selector#2.0-preview",
-    "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
-    "polymer": "Polymer/polymer#^2.0.0-rc.3",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0-rc.3"
+    "app-layout": "PolymerElements/app-layout",
+    "app-route": "PolymerElements/app-route",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg",
+    "iron-media-query": "PolymerElements/iron-media-query",
+    "iron-pages": "PolymerElements/iron-pages",
+    "iron-selector": "PolymerElements/iron-selector",
+    "paper-icon-button": "PolymerElements/paper-icon-button",
+    "polymer": "Polymer/polymer#^2.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0"
   },
   "private": true
 }
