--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button",
     "polymer": "Polymer/polymer#^2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "iron-icons": "PolymerElements/iron-icons"
+    "iron-icons": "PolymerElements/iron-icons",
+    "iron-image": "PolymerElements/iron-image#^2.1.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
